...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/example_cocktail" />

        <TextView
            android:id="@+id/drinkTextView"
            style="@style/Cocktail.GridCaptionText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/drinkImageView"
            app:layout_constraintEnd_toEndOf="@+id/drinkImageView"
...
            android:id="@+id/troubleGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="troubleTextView,troubleImageView,retryButton" />

        <ImageView
            android:id="@+id/favoriteImageView"
            android:layout_width="48dp"
            android:layout_height="0dp"
            android:adjustViewBounds="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:scaleType="center"
            android:tint="@color/white"
...
