...
    <item
        android:id="@+id/bottom_nav_categories"
        android:title="@string/bottom_nav_categories_title"
        android:icon="@drawable/ic_glass_cocktail_24dp"/>

    <item
        android:id="@+id/bottom_nav_ingredients"
        android:title="@string/bottom_nav_ingredients_title"
        android:icon="@drawable/ic_fruit_cherries_24dp"/>

    <item
      android:id="@+id/bottom_nav_favorites"
      android:title="@string/bottom_nav_favorites_title"
      android:icon="@drawable/ic_favorite_24dp"/>

</menu>

