...
        android:textColor="?attr/colorOnSurface"
        android:textSize="24dp"
        tools:ignore="SpUsage"
        tools:text="S" />

    <TextView
        android:id="@+id/ingredientTextView"
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:layout_width="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/ingredientAbbrTextView"
        app:layout_constraintEnd_toStartOf="@id/helpImageView"
...
